...
  String get systemTrayShowTkit => 'Show TKit';

  @override
  String get authConnectToTwitch => 'Connect to Twitch';

  @override
  String get systemTrayAutoSwitcher => 'Auto Switcher';

  @override
  String get authLoading => 'Loading...';

  @override
  String get systemTrayCategoryMappings => 'Category Mappings';

  @override
  String get authRefreshingToken => 'Refreshing token...';

  @override
  String get systemTraySettings => 'Settings';

  @override
  String get authSuccessfullyAuthenticated => 'Successfully Authenticated';

  @override
  String get systemTrayExit => 'Exit';
...
